docs/Kubernetes/Kubernets Ingress 实战/04-ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: wordpress-space
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress.ingress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
