docs/Kubernetes/Kubernets Ingress 实战/04-ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  namespace: wordpress-space
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - wordpress.ingress.com
    secretName: ca-cert
  rules:
    - host: wordpress.ingress.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
